more explanation in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
     </ul>
 
     <p>
-      The above links should/could other static content. Obviously, there must be exceptions in the rewrite rules of the
+      The above links should/could show other static content. Obviously, there must be exceptions in the rewrite rules
+      of the
       server
       defined. And these routes should not interfere with the routes of the app.
     </p>
@@ -75,6 +76,17 @@
     <p> All sorts of content can come here, explaining the great app. And that you can or even should install it to go
       on
       with it. And that the button below creates all the magic you need.
+    </p>
+    <p>
+      To test the PWA version of this app - you can either already install it (if you have chrome, you are likely
+      already seeing install icon in the URL).
+    </p>
+    <p>
+      Or if you just want to boot the app, click the button below.
+    </p>
+    <p>
+      Of course, in real life, we wouldn't say "boot", but say - "acces app" or "signup" or maybe even "install" -
+      leading to beforeinstallprompt actions...
     </p>
     <button type="button" onclick="bootApp();">Boot app</button>
   </main>
