more explanation in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,10 @@
       Of course, in real life, we wouldn't say "boot", but say - "acces app" or "signup" or maybe even "install" -
       leading to beforeinstallprompt actions...
     </p>
+    <p>
+      Please note - there is no automatic service worker update routing in the code. So if you want to check for a new
+      version of this app - please unregister the service worker in devtools.
+    </p>
     <button type="button" onclick="bootApp();">Boot app</button>
   </main>
 
