--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
 
     console.log('asdasdasds22', element.style.position, element.style.overflow)
 
-    element.style.backgroundColor = 'red'; // this is working
+    //  element.style.backgroundColor = 'red'; // this is working
     element.style.position = 'initial';
     element.style.overflow = 'visible';
     // element.style.removeProperty('position');
