--- a/src/index.html
+++ b/src/index.html
@@ -109,8 +109,8 @@
     // element.style.removeProperty('overflow');
 
     setTimeout(() => {
-      element.style.removeProperty('position');
-      element.style.removeProperty('overflow');
+      //  element.style.removeProperty('position');
+      //  element.style.removeProperty('overflow');
 
     }, 4000)
 
